Release 1.1.49
  * Setting move order on unit with 0 mob now draws black line
  * Building new city now updates map
  * Added supply unit list to Supply tab

Release 1.1.48
  * Fixed error that occurred when building a city.
  * Fixed missing black line when setting move order on unit.
  * Improved error logging.  Now when there's an error, the user will be told an error number.  This
    number will be logged in the database along with the details of the error so they can be cross-referenced
    later.

Release 1.1.47
  * Fixed exploit that allowed players to build a new city with less than 64 CP.
  * Fixed bug that wasn't listing units that gained mobility since last login in red
  * Fixed bug that crashed client when unit ceded
  * Widened tech table so all users can see tech decimal places (thanks Trabi and Junta!)
  * Stats details tab automatically picks the opponent you've fought the most with.

Release 1.1.46
  * The Support tab now helps you manage support across the entire map--displaying overlapping support
    and supply lines of your ports and supply ships.
  * City Waypoint is now cleared when you capture a city and when the type of unit being built in the city changes.
  * Ported to Linux with a tremendous amount of help from Barry Peddycord.  Thank you kind sir!!!
  * Changed event model in client.  This should make the client faster and less glitchy, but
    some stuff in the client might not update properly while I work out the kinks of the new event model.

Release 1.1.45
  * Fixed sound.  (You can disable it in prefs if you want.)
  * Fixed bug to allow ships to enter water sectors that are completely surrounded by land.  (Thanks thegeneral!)
  * When on the city tab, don't select a single unit in a city.  This will allow players to set waypoints for all cities.
  * Removed horizontal scrollbars from sector, unit, city, and plan tabs.
  * Fixed bug that didn't display ETA on city tab
  * Moved prefs from tab to menu bar